# project-business-decisions-noahshiira

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  environment.yml  fix_notebook_imports.py  notebook.ipynb  print_nb_cells.py  pyproject.toml  replication_smart_green_nudging.ipynb  replication_smart_green_nudging_v2.ipynb  requirements.txt  run-notebook.yml  search_notebook_usage.py  smart_green_nudging_replication_FINAL.ipynb  smart_green_nudging_with_summary.ipynb  tmp_check_encoding.py
.github/workflows/: run-notebook.yml
data/: test_data.csv
old_notebooks/: Untitled-1.ipynb  replication_smart_green_nudging.ipynb  smart_green_nudging_with_summary.ipynb
project/src/: extensions.py  policy.py  robustness.py
scripts/: run_all.py
smart_green_nudging_refactored/project/: README.md
smart_green_nudging_refactored/project/src/: config.py  reporting.py
smart_green_nudging_refactored/project/tests/: test_ate.py
src/: ate.py  causal_forest.py  config.py  data.py  extensions.py  features.py  plots.py  policy.py  reporting.py  robustness.py  run_all.py  simulate_data.py
tests/: conftest.py  test_ate.py
