[project]
name = "replication-smart-green-nudging"
version = "0.1.0"
description = "Replication of von Zahn et al. (2024) - Smart Green Nudging (Marketing Science)"
requires-python = ">=3.11"

[project.scripts]
replication-smart-green-nudging = "scripts.run_all:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]    
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["features", "ate", "causal_forest", "plots", "src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
